--- a/rooms.html
+++ b/rooms.html
@@ -32,45 +32,35 @@
 
     <!-- ----------------------------  Navigation ---------------------------------------------- -->
 
-    <nav class="nav" style="padding: 0 .2rem; height: 10vh;">
-        <div class="nav-menu flex-row">
-            <div class="nav-brand">
-                <a href="./Index.html" class="text-gray" style=" display: block;  padding: 1rem 0; font-size: 1.6rem;">Valdocco Resorts</h1></a>
+    <nav>  
+        <div class="navbar  bg-white-500 md:bg-withe-500 lg:bg-white-500">
+            <div class="flex-1">
+              <a href="./Index - EN.html" class="btn btn-ghost normal-case text-xl text-[#3f4954] sm:text-2xl   m ">Valdocco Resorts</a>
             </div>
-            <div class="toggle-collapse">
-                <div class="toggle-icons">
-                    <i class="fas fa-bars"></i>
-                </div>
+            <div class="flex-none">
+              <ul class="menu menu-horizontal px-1">
+                <li><a href="./Nueva pagina de comodidades.html">Comodidades</a></li>
+                <li><a href="./reserva_nueva.php"><i class="fa fa-calendar-alt fa-2x" style="color: rgb(214, 213, 213);"></i>Haz una Reserva</a></li>
+                <li><a href="./rooms.html">Habitaciones</a></li>
+                <li><a href="./Gatrooo.html">Gastronomia</a></li>
+                <li><a href="./EventESPP.html">Eventos Especiales</a></li>
+                <li><a href="./abouut.html">Sobre nosotros</a></li>
+                <li>
+                    <details>
+                      <summary>
+                        Lenguaje</i>
+                      </summary>
+                      <ul class="p-2 bg-base-100">
+                        <li><a href="#">Español (ES)</a></li>
+                        <li><a href="./Index - EN.html">Ingles (EN)</a></li>
+                      </ul>
+                    </details>
+                  </li>
+              </ul>
             </div>
-            <div>
-                <ul class="nav-items">
-                    <li class="nav-link">
-                        <a href="./Comodidades VALDOCO.html" style="color: rgba(0, 0, 0, 0.712); position: relative;  padding: 1.6rem 1rem;">Comodidades</a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="./gastronomia.html" style="color: rgba(0, 0, 0, 0.712); position: relative;  padding: 1.6rem 1rem;">Gastronomia</a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="./Eventos.html " style="color: rgba(0, 0, 0, 0.712); position: relative;  padding: 1.6rem 1rem;">Eventos Especiales</a>
-                    </li>
-                    </li>
-                    <li class="nav-link">
-                        <a href="#" style="color: rgba(0, 0, 0, 0.712);  position: relative;  padding: 1.6rem 1rem;">Ubicaciones</a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="./Sobre nosotros.html" style="color: rgba(0, 0, 0, 0.712); position: relative;  padding: 1.6rem 1rem;">¿Quienes somos?</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="social text-gray" style="padding: 1.4rem 0;">
-                <a href="#" style="color: rgba(0, 0, 0, 0.712)"><i class="fab fa-facebook-f" style="padding: 0 .2rem;"></i></a>
-                <a href="#" style="color: rgba(0, 0, 0, 0.712)"><i class="fab fa-instagram" style="padding: 0 .2rem;"></i></a>
-                <a href="#" style="color: rgba(0, 0, 0, 0.712)"><i class="fab fa-twitter" style="padding: 0 .2rem;"></i></a>
-                <a href="#" style="color: rgba(0, 0, 0, 0.712)"><i class="fab fa-youtube" style="padding: 0 .2rem;"></i></a>
-            </div>
-        </div>
-    </nav>
-
+          </div>
+    </nav> 
+    
     <main>
         <section class="site-title">
             <div class="site-background" data-aos="fade-up" data-aos-delay="100">
